2007-09-16 tommi@tntnet.org
  - don't use libltdl by default since it brings more problems than it solves.
    On linux we need RTLD_GLOBAL in dlopen to make exceptions and rtti
    working. libltdl does not pass that flag. On Aix shared libraries has a
    extension .a by default, which is not recognized by libltdl.

2007-07-07 tommi@tntnet.org
  - rewritten ini-file-parser
  - make iconv unconditional and make iconv-buffer bigger for better
    performance
  - properties-file-parser

2007-07-06 tommi@tntnet.org
  - add policy based smart pointer implementation
  - add NonCopyable-class, which can be used as a base-class for objects,
    which must not be copied
  - fix bug in subtraction-method of cxxtools::HiresTime

2007-05-12 tommi@tntnet.org
  - logging can be disabled completely now in the logging-properties by
    setting disabled to 1 (or 'y' or 'Y' or 't' or 'T')

2007-05-11 tommi@tntnet.org
  - make cxxtools::Pool working again
  - build-improvements (port to solaris/SunStudio)

2007-05-04 tommi@tntnet.org
  - replace std::string with char* as a buffer in udpstream-class
  - remove RWLOCK_MUTEX_INITIALIZER because this is unknown on Mac OS X and
    the rwlock_t-structure is anyway initalized with pthread_rwlock_init

2007-05-03 tommi@tntnet.org
  - bugfix: clear buffer of udpstream after sending message
  - make cxxtools::socket::doPoll-method public and rename to poll

2007-04-26 tommi@tntnet.org
  - try next addrinfo, when socket-creation fails. Previously cxxtools fails
    to create a socket, if first addrinfo-entry does not work.

2007-04-20 tommi@tntnet.org
  - fix stream-classes to conform ANSI

2007-04-18 tommi@tntnet.org
  - remove double-lock in pool-class, which resulted in a deadlock on solaris

2007-04-17 tommi@tntnet.org
  - another change in initialization in std::ios-derived classes after reading
    the c++-standard (now std::ios::init is used for initialization)

2007-04-11 tommi@tntnet.org